# spiderdjango

./: README.md  main.py  manage.py  pyproject.toml  settings.py  spiderweb.db
mydb/: apps.py  models.py
mydb/migrations/: 0001_initial.py
